--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,13 @@
   background-color: black;
   color: white;
   font-family: 'Roboto' , sans-serif; }
-  .footer .contactos {
-    padding: 20px;
-    background-color: black;
-    color: white;
-    font-size: 40px;
-    font-family: 'Roboto', sans-serif; }
+
+.contactos {
+  padding: 20px;
+  background-color: black;
+  color: white;
+  font-size: 40px;
+  font-family: 'Roboto', sans-serif; }
 
 #manga {
   padding: 50px;
